--- a/index.htm
+++ b/index.htm
@@ -6,14 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>SiteBoom</title>
     <link href="style/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <script src="main/main.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="main/bootstrap.js"></script>
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
     </head>
     <body>
         <header></header>
@@ -65,19 +60,93 @@
                 </form>
             </section>
             <section class="carousel">
-                <h1 class="carousel-title">РЕКОМЕНДАЦІЇ ДЛЯ ТОВАРУ</h1>
-                <div class="line"></div>
+                <div class="head-n-arrow">
+                    <h1 class="carousel-title">РЕКОМЕНДАЦІЇ ДЛЯ ТОВАРУ</h1>
+                    <div class="arrows">
+                        <div id="left"></div>
+                        <div id="right"></div>
+                    </div>
+                </div>
+                <div class="grey-line"></div>
                 <article class="stuff">
-                    <section class="good">
-                        <img src="">
-                        <p class="good-title">Ліхтарик</p>
-                        <p class="good-price">117грн<span class="old">122грн</span></p>
-                        <span class="good-small">код:1704</span><button type="button" class="good-buy">КУПИТИ</button>
-                        <p class="check">Порівняти товар</p>
-                    </section>
+                    <div id="board">
+                        <section class="good">
+                            <img src="img/%D0%91%D0%B5%D0%B7%20%D0%B8%D0%BC%D0%B5%D0%BD%D0%B8-1.png">
+                            <p class="good-title">Ліхтарик</p>
+                            <p class="good-price">$199.00<span class="old">$299.00</span></p>
+                            <div class="btn">
+                                <span class="good-small">Код:1704</span><button type="button" class="good-buy">КУПИТИ</button>
+                            </div>
+                            <p class="check">Порівняти товар</p>
+                        </section>
+                        <section class="good">
+                            <img src="img/%D0%91%D0%B5%D0%B7%20%D0%B8%D0%BC%D0%B5%D0%BD%D0%B8-1.png">
+                            <p class="good-title">Лампа</p>
+                            <p class="good-price">$199.00<span class="old">$299.00</span></p>
+                            <div class="btn">
+                                <span class="good-small">Код:1704</span><button type="button" class="good-buy">КУПИТИ</button>
+                            </div>
+                            <p class="check">Порівняти товар</p>
+                        </section>
+                        <section class="good">
+                            <img src="img/%D0%91%D0%B5%D0%B7%20%D0%B8%D0%BC%D0%B5%D0%BD%D0%B8-1.png">
+                            <p class="good-title">Кабель</p>
+                            <p class="good-price">$199.00<span class="old">$299.00</span></p>
+                            <div class="btn">
+                                <span class="good-small">Код:1704</span><button type="button" class="good-buy">КУПИТИ</button>
+                            </div>
+                            <p class="check">Порівняти товар</p>
+                        </section>
+                        <section class="good">
+                            <img src="img/%D0%91%D0%B5%D0%B7%20%D0%B8%D0%BC%D0%B5%D0%BD%D0%B8-1.png">
+                            <p class="good-title">Ліхтарик</p>
+                            <p class="good-price">$199.00<span class="old">$299.00</span></p>
+                            <div class="btn">
+                                <span class="good-small">Код:1704</span><button type="button" class="good-buy">КУПИТИ</button>
+                            </div>
+                            <p class="check">Порівняти товар</p>
+                        </section>
+                        <section class="good">
+                            <img src="img/%D0%91%D0%B5%D0%B7%20%D0%B8%D0%BC%D0%B5%D0%BD%D0%B8-1.png">
+                            <p class="good-title">Ліхтарик</p>
+                            <p class="good-price">$199.00<span class="old">$299.00</span></p>
+                            <div class="btn">
+                                <span class="good-small">Код:1704</span><button type="button" class="good-buy">КУПИТИ</button>
+                            </div>
+                            <p class="check">Порівняти товар</p>
+                        </section>
+                        <section class="good">
+                            <img src="img/%D0%91%D0%B5%D0%B7%20%D0%B8%D0%BC%D0%B5%D0%BD%D0%B8-1.png">
+                            <p class="good-title">Ліхтарик</p>
+                            <p class="good-price">$199.00<span class="old">$299.00</span></p>
+                            <div class="btn">
+                                <span class="good-small">Код:1704</span><button type="button" class="good-buy">КУПИТИ</button>
+                            </div>
+                            <p class="check">Порівняти товар</p>
+                        </section>
+                        <section class="good">
+                            <img src="img/%D0%91%D0%B5%D0%B7%20%D0%B8%D0%BC%D0%B5%D0%BD%D0%B8-1.png">
+                            <p class="good-title">Ліхтарик</p>
+                            <p class="good-price">$199.00<span class="old">$299.00</span></p>
+                            <div class="btn">
+                                <span class="good-small">Код:1704</span><button type="button" class="good-buy">КУПИТИ</button>
+                            </div>
+                            <p class="check">Порівняти товар</p>
+                        </section>
+                        <section class="good">
+                            <img src="img/%D0%91%D0%B5%D0%B7%20%D0%B8%D0%BC%D0%B5%D0%BD%D0%B8-1.png">
+                            <p class="good-title">Ліхтарик</p>
+                            <p class="good-price">$199.00<span class="old">$299.00</span></p>
+                            <div class="btn">
+                                <span class="good-small">Код:1704</span><button type="button" class="good-buy">КУПИТИ</button>
+                            </div>
+                            <p class="check">Порівняти товар</p>
+                        </section>
+                    </div>
                 </article>
             </section>
         </main>
-        <footer></footer>
+        <footer>
+        </footer>
     </body>
 </html> 
